--- a/src/Components/ReviewForm/ReviewForm.css
+++ b/src/Components/ReviewForm/ReviewForm.css
@@ -68,6 +68,7 @@
     display: flex;
     flex-direction: row-reverse;
     justify-content: flex-end;
+    
 }
 
 .stars input[type="radio"] {
@@ -76,9 +77,9 @@
 
 .stars label {
     font-size: 2rem;
-    color: #ddd;
+    color: white;
     cursor: pointer;
-    background-color: white;
+    /* background-color: white; */
     /* border: 1px solid #ccc; */
     margin: 0 0.1rem;
     padding: 0.1rem;
